[tool.poetry]
name = "pygradflow"
version = "0.3.13"
description = "PyGradFlow is a simple implementation of the sequential homotopy method to be used to solve general nonlinear programs."
authors = ["Christoph Hansknecht <christoph.hansknecht@tu-clausthal.de>"]
readme = "README.md"
repository = "https://github.com/chrhansk/pygradflow"
documentation = "https://pygradflow.readthedocs.io"


[tool.poetry.dependencies]
python = ">=3.9,<3.13"
scipy = "^1.10.1"
matplotlib = "^3.7.1"
termcolor = "^2.3.0"
numpy = "^1.20"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-isort = "^3.1.0"
pytest-black = "^0.3.12"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"

[tool.poetry.group.bench]
optional = true

[tool.poetry.group.bench.dependencies]
pyqplib = "^0.1.3"
pycutest = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
